add_library(cursive0_core STATIC
  00_core/diagnostic_codes.cpp
  00_core/diagnostic_messages.cpp
  00_core/diagnostic_render.cpp
  00_core/diagnostics.cpp
  00_core/hash.cpp
  00_core/host_primitives.cpp
  00_core/ident.cpp
  00_core/path.cpp
  00_core/source_load.cpp
  00_core/span.cpp
  00_core/spec_trace.cpp
  00_core/symbols.cpp
  00_core/ub_model.cpp
  00_core/unicode.cpp
)

target_include_directories(cursive0_core PUBLIC
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursive0_core PUBLIC cxx_std_20)

add_library(cursive0_project STATIC
  01_project/assemblies.cpp
  01_project/deterministic_order.cpp
  01_project/ir_assembly.cpp
  01_project/link.cpp
  01_project/load_project.cpp
  01_project/manifest.cpp
  01_project/module_discovery.cpp
  01_project/outputs.cpp
  01_project/project_validate.cpp
  01_project/tool_resolution.cpp
  01_project/unwind_ffi_surface.cpp
)

target_include_directories(cursive0_project PUBLIC
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursive0_project PUBLIC cxx_std_20)

add_library(cursive0_source STATIC
  02_source/ast/ast_builder.cpp
  02_source/ast/ast_dump.cpp
  02_source/ast/ast_nodes.cpp
  02_source/ast/ast_validate.cpp
  02_source/lexer/keyword_policy.cpp
  02_source/lexer/lexer.cpp
  02_source/lexer/lexer_ident.cpp
  02_source/lexer/lexer_literals.cpp
  02_source/lexer/lexer_security.cpp
  02_source/lexer/lexer_ws.cpp
  02_source/lexer/token.cpp
  02_source/lexer/tokenize.cpp
  02_source/parser/expr/addr_of.cpp
  02_source/parser/expr/all_expr.cpp
  02_source/parser/expr/alloc_expr.cpp
  02_source/parser/expr/array_literal.cpp
  02_source/parser/expr/binary.cpp
  02_source/parser/expr/block_expr.cpp
  02_source/parser/expr/call.cpp
  02_source/parser/expr/call_type_args.cpp
  02_source/parser/expr/cast.cpp
  02_source/parser/expr/closure_expr.cpp
  02_source/parser/expr/contract_entry.cpp
  02_source/parser/expr/contract_result.cpp
  02_source/parser/expr/deref.cpp
  02_source/parser/expr/dispatch_expr.cpp
  02_source/parser/expr/enum_literal.cpp
  02_source/parser/expr/error_expr.cpp
  02_source/parser/expr/expr_common.cpp
  02_source/parser/expr/field_access.cpp
  02_source/parser/expr/identifier.cpp
  02_source/parser/expr/if_expr.cpp
  02_source/parser/expr/index_access.cpp
  02_source/parser/expr/literal.cpp
  02_source/parser/expr/loop_conditional.cpp
  02_source/parser/expr/loop_infinite.cpp
  02_source/parser/expr/loop_iter.cpp
  02_source/parser/expr/match_expr.cpp
  02_source/parser/expr/method_call.cpp
  02_source/parser/expr/move_expr.cpp
  02_source/parser/expr/null_ptr.cpp
  02_source/parser/expr/parallel_expr.cpp
  02_source/parser/expr/path.cpp
  02_source/parser/expr/pipeline_expr.cpp
  02_source/parser/expr/propagate_expr.cpp
  02_source/parser/expr/qualified_apply.cpp
  02_source/parser/expr/qualified_name.cpp
  02_source/parser/expr/race_expr.cpp
  02_source/parser/expr/range.cpp
  02_source/parser/expr/record_literal.cpp
  02_source/parser/expr/spawn_expr.cpp
  02_source/parser/expr/sync_expr.cpp
  02_source/parser/expr/transmute_expr.cpp
  02_source/parser/expr/tuple_access.cpp
  02_source/parser/expr/tuple_literal.cpp
  02_source/parser/expr/unary.cpp
  02_source/parser/expr/unsafe_block_expr.cpp
  02_source/parser/expr/wait_expr.cpp
  02_source/parser/expr/yield_expr.cpp
  02_source/parser/expr/yield_from_expr.cpp
  02_source/parser/item/attribute_list.cpp
  02_source/parser/item/class_decl.cpp
  02_source/parser/item/contract_clause.cpp
  02_source/parser/item/enum_decl.cpp
  02_source/parser/item/extern_block.cpp
  02_source/parser/item/foreign_contract_clause.cpp
  02_source/parser/item/generic_params.cpp
  02_source/parser/item/import_decl.cpp
  02_source/parser/item/item_common.cpp
  02_source/parser/item/modal_decl.cpp
  02_source/parser/item/procedure_decl.cpp
  02_source/parser/item/record_decl.cpp
  02_source/parser/item/signature.cpp
  02_source/parser/item/static_decl.cpp
  02_source/parser/item/type_alias_decl.cpp
  02_source/parser/item/using_decl.cpp
  02_source/parser/item/visibility.cpp
  02_source/parser/item/where_clause.cpp
  02_source/parser/parse_modules.cpp
  02_source/parser/parser.cpp
  02_source/parser/parser_angle.cpp
  02_source/parser/parser_consume.cpp
  02_source/parser/parser_docs.cpp
  02_source/parser/parser_paths.cpp
  02_source/parser/parser_recovery.cpp
  02_source/parser/parser_state.cpp
  02_source/parser/pattern/enum_pattern.cpp
  02_source/parser/pattern/identifier_pattern.cpp
  02_source/parser/pattern/literal_pattern.cpp
  02_source/parser/pattern/modal_pattern.cpp
  02_source/parser/pattern/pattern_common.cpp
  02_source/parser/pattern/range_pattern.cpp
  02_source/parser/pattern/record_pattern.cpp
  02_source/parser/pattern/tuple_pattern.cpp
  02_source/parser/pattern/typed_pattern.cpp
  02_source/parser/pattern/wildcard_pattern.cpp
  02_source/parser/stmt/assign_stmt.cpp
  02_source/parser/stmt/break_stmt.cpp
  02_source/parser/stmt/compound_assign_stmt.cpp
  02_source/parser/stmt/continue_stmt.cpp
  02_source/parser/stmt/defer_stmt.cpp
  02_source/parser/stmt/error_stmt.cpp
  02_source/parser/stmt/expr_stmt.cpp
  02_source/parser/stmt/frame_stmt.cpp
  02_source/parser/stmt/key_block_stmt.cpp
  02_source/parser/stmt/let_stmt.cpp
  02_source/parser/stmt/region_stmt.cpp
  02_source/parser/stmt/return_stmt.cpp
  02_source/parser/stmt/shadow_let_stmt.cpp
  02_source/parser/stmt/shadow_var_stmt.cpp
  02_source/parser/stmt/stmt_common.cpp
  02_source/parser/stmt/unsafe_block_stmt.cpp
  02_source/parser/stmt/var_stmt.cpp
  02_source/parser/type/array_type.cpp
  02_source/parser/type/bytes_type.cpp
  02_source/parser/type/closure_type.cpp
  02_source/parser/type/dynamic_type.cpp
  02_source/parser/type/function_type.cpp
  02_source/parser/type/opaque_type.cpp
  02_source/parser/type/permission.cpp
  02_source/parser/type/primitive_type.cpp
  02_source/parser/type/raw_ptr_type.cpp
  02_source/parser/type/refinement_clause.cpp
  02_source/parser/type/safe_ptr_type.cpp
  02_source/parser/type/slice_type.cpp
  02_source/parser/type/state_specific_type.cpp
  02_source/parser/type/string_type.cpp
  02_source/parser/type/tuple_type.cpp
  02_source/parser/type/type_args.cpp
  02_source/parser/type/type_bounds.cpp
  02_source/parser/type/type_common.cpp
  02_source/parser/type/type_path.cpp
  02_source/parser/type/union_type.cpp
  02_source/source/source_map.cpp
  02_source/source/source_normalize.cpp
)

target_include_directories(cursive0_source PUBLIC
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursive0_source PUBLIC cxx_std_20)

add_library(cursive0_comptime STATIC
  03_comptime/comptime_gate.cpp
  03_comptime/deferred_attributes.cpp
)

target_include_directories(cursive0_comptime PUBLIC
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursive0_comptime PUBLIC cxx_std_20)

add_library(cursive0_analysis STATIC
  04_analysis/attributes/attribute_registry.cpp
  04_analysis/attributes/attribute_targets.cpp
  04_analysis/attributes/attribute_validate.cpp
  04_analysis/caps/authority_model.cpp
  04_analysis/caps/callgraph_caps.cpp
  04_analysis/caps/cap_requirements.cpp
  04_analysis/caps/context_caps.cpp
  04_analysis/composite/arrays_slices.cpp
  04_analysis/composite/class_linearization.cpp
  04_analysis/composite/classes.cpp
  04_analysis/composite/enums.cpp
  04_analysis/composite/function_types.cpp
  04_analysis/composite/record_methods.cpp
  04_analysis/composite/records.cpp
  04_analysis/composite/tuples.cpp
  04_analysis/composite/unions.cpp
  04_analysis/concurrency/all.cpp
  04_analysis/concurrency/async.cpp
  04_analysis/concurrency/dispatch.cpp
  04_analysis/concurrency/parallel.cpp
  04_analysis/concurrency/race.cpp
  04_analysis/concurrency/spawn.cpp
  04_analysis/concurrency/sync.cpp
  04_analysis/concurrency/wait.cpp
  04_analysis/concurrency/yield.cpp
  04_analysis/concurrency/yield_from.cpp
  04_analysis/conformance/conformance.cpp
  04_analysis/conformance/subset_checks.cpp
  04_analysis/contracts/contract_check.cpp
  04_analysis/contracts/contract_intrinsics.cpp
  04_analysis/contracts/contract_purity.cpp
  04_analysis/contracts/verification.cpp
  04_analysis/keys/key_capture.cpp
  04_analysis/keys/key_conflict.cpp
  04_analysis/keys/key_context.cpp
  04_analysis/keys/key_lifetimes.cpp
  04_analysis/keys/key_paths.cpp
  04_analysis/memory/borrow_bind.cpp
  04_analysis/memory/calls.cpp
  04_analysis/memory/init_planner.cpp
  04_analysis/memory/region_type.cpp
  04_analysis/memory/regions.cpp
  04_analysis/memory/safe_ptr.cpp
  04_analysis/memory/string_bytes.cpp
  04_analysis/modal/modal.cpp
  04_analysis/modal/modal_fields.cpp
  04_analysis/modal/modal_transitions.cpp
  04_analysis/modal/modal_widen.cpp
  04_analysis/provenance/prov_args.cpp
  04_analysis/provenance/prov_block.cpp
  04_analysis/provenance/prov_expr.cpp
  04_analysis/provenance/prov_place.cpp
  04_analysis/provenance/prov_stmt.cpp
  04_analysis/resolve/resolve_arm.cpp
  04_analysis/resolve/resolve_attributes.cpp
  04_analysis/resolve/resolve_callee.cpp
  04_analysis/resolve/resolve_contracts.cpp
  04_analysis/resolve/resolve_enum_payload.cpp
  04_analysis/resolve/resolve_expr.cpp
  04_analysis/resolve/resolve_expr_list.cpp
  04_analysis/resolve/resolve_extern.cpp
  04_analysis/resolve/resolve_generics.cpp
  04_analysis/resolve/resolve_imports.cpp
  04_analysis/resolve/resolve_items.cpp
  04_analysis/resolve/resolve_module.cpp
  04_analysis/resolve/resolve_path.cpp
  04_analysis/resolve/resolve_pattern.cpp
  04_analysis/resolve/resolve_qual.cpp
  04_analysis/resolve/resolve_stmt.cpp
  04_analysis/resolve/resolve_stmt_seq.cpp
  04_analysis/resolve/resolve_types.cpp
  04_analysis/resolve/resolve_using.cpp
  04_analysis/resolve/scopes.cpp
  04_analysis/resolve/scopes_intro.cpp
  04_analysis/resolve/scopes_lookup.cpp
  04_analysis/typing/arg_pass.cpp
  04_analysis/typing/args_ok.cpp
  04_analysis/typing/const_len.cpp
  04_analysis/typing/expr/addr_of.cpp
  04_analysis/typing/expr/all_expr.cpp
  04_analysis/typing/expr/alloc_expr.cpp
  04_analysis/typing/expr/array_literal.cpp
  04_analysis/typing/expr/binary.cpp
  04_analysis/typing/expr/block_expr.cpp
  04_analysis/typing/expr/call.cpp
  04_analysis/typing/expr/call_type_args.cpp
  04_analysis/typing/expr/cast.cpp
  04_analysis/typing/expr/closure_expr.cpp
  04_analysis/typing/expr/contract_entry.cpp
  04_analysis/typing/expr/contract_result.cpp
  04_analysis/typing/expr/deref.cpp
  04_analysis/typing/expr/dispatch_expr.cpp
  04_analysis/typing/expr/enum_literal.cpp
  04_analysis/typing/expr/error_expr.cpp
  04_analysis/typing/expr/expr_common.cpp
  04_analysis/typing/expr/field_access.cpp
  04_analysis/typing/expr/identifier.cpp
  04_analysis/typing/expr/if_expr.cpp
  04_analysis/typing/expr/index_access.cpp
  04_analysis/typing/expr/literal.cpp
  04_analysis/typing/expr/loop_conditional.cpp
  04_analysis/typing/expr/loop_infinite.cpp
  04_analysis/typing/expr/loop_iter.cpp
  04_analysis/typing/expr/match_expr.cpp
  04_analysis/typing/expr/method_call.cpp
  04_analysis/typing/expr/move_expr.cpp
  04_analysis/typing/expr/null_ptr.cpp
  04_analysis/typing/expr/parallel_expr.cpp
  04_analysis/typing/expr/path.cpp
  04_analysis/typing/expr/pipeline_expr.cpp
  04_analysis/typing/expr/propagate_expr.cpp
  04_analysis/typing/expr/qualified_apply.cpp
  04_analysis/typing/expr/qualified_name.cpp
  04_analysis/typing/expr/race_expr.cpp
  04_analysis/typing/expr/range.cpp
  04_analysis/typing/expr/record_literal.cpp
  04_analysis/typing/expr/spawn_expr.cpp
  04_analysis/typing/expr/sync_expr.cpp
  04_analysis/typing/expr/transmute_expr.cpp
  04_analysis/typing/expr/tuple_access.cpp
  04_analysis/typing/expr/tuple_literal.cpp
  04_analysis/typing/expr/unary.cpp
  04_analysis/typing/expr/unsafe_block_expr.cpp
  04_analysis/typing/expr/wait_expr.cpp
  04_analysis/typing/expr/yield_expr.cpp
  04_analysis/typing/expr/yield_from_expr.cpp
  04_analysis/typing/item/attribute_list.cpp
  04_analysis/typing/item/class_decl.cpp
  04_analysis/typing/item/contract_clause.cpp
  04_analysis/typing/item/enum_decl.cpp
  04_analysis/typing/item/extern_block.cpp
  04_analysis/typing/item/foreign_contract_clause.cpp
  04_analysis/typing/item/generic_params.cpp
  04_analysis/typing/item/import_decl.cpp
  04_analysis/typing/item/item_common.cpp
  04_analysis/typing/item/modal_decl.cpp
  04_analysis/typing/item/procedure_decl.cpp
  04_analysis/typing/item/record_decl.cpp
  04_analysis/typing/item/signature.cpp
  04_analysis/typing/item/static_decl.cpp
  04_analysis/typing/item/type_alias_decl.cpp
  04_analysis/typing/item/using_decl.cpp
  04_analysis/typing/item/visibility.cpp
  04_analysis/typing/item/where_clause.cpp
  04_analysis/typing/literals.cpp
  04_analysis/typing/match_check.cpp
  04_analysis/typing/pattern/enum_pattern.cpp
  04_analysis/typing/pattern/identifier_pattern.cpp
  04_analysis/typing/pattern/literal_pattern.cpp
  04_analysis/typing/pattern/modal_pattern.cpp
  04_analysis/typing/pattern/pattern_common.cpp
  04_analysis/typing/pattern/range_pattern.cpp
  04_analysis/typing/pattern/record_pattern.cpp
  04_analysis/typing/pattern/tuple_pattern.cpp
  04_analysis/typing/pattern/typed_pattern.cpp
  04_analysis/typing/pattern/wildcard_pattern.cpp
  04_analysis/typing/stmt/assign_stmt.cpp
  04_analysis/typing/stmt/break_stmt.cpp
  04_analysis/typing/stmt/compound_assign_stmt.cpp
  04_analysis/typing/stmt/continue_stmt.cpp
  04_analysis/typing/stmt/defer_stmt.cpp
  04_analysis/typing/stmt/error_stmt.cpp
  04_analysis/typing/stmt/expr_stmt.cpp
  04_analysis/typing/stmt/frame_stmt.cpp
  04_analysis/typing/stmt/key_block_stmt.cpp
  04_analysis/typing/stmt/let_stmt.cpp
  04_analysis/typing/stmt/region_stmt.cpp
  04_analysis/typing/stmt/return_stmt.cpp
  04_analysis/typing/stmt/shadow_let_stmt.cpp
  04_analysis/typing/stmt/shadow_var_stmt.cpp
  04_analysis/typing/stmt/stmt_common.cpp
  04_analysis/typing/stmt/unsafe_block_stmt.cpp
  04_analysis/typing/stmt/var_stmt.cpp
  04_analysis/typing/subtyping.cpp
  04_analysis/typing/type_equiv.cpp
  04_analysis/typing/type_infer.cpp
  04_analysis/typing/type_refs.cpp
  04_analysis/typing/type_wf.cpp
  04_analysis/typing/typecheck.cpp
)

target_include_directories(cursive0_analysis PUBLIC
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursive0_analysis PUBLIC cxx_std_20)

add_library(cursive0_codegen STATIC
  05_codegen/abi/abi_calls.cpp
  05_codegen/abi/abi_lowering.cpp
  05_codegen/abi/abi_params.cpp
  05_codegen/abi/abi_returns.cpp
  05_codegen/abi/abi_types.cpp
  05_codegen/abi/calling_conventions.cpp
  05_codegen/checks/checks.cpp
  05_codegen/checks/panic.cpp
  05_codegen/checks/poison_instrument.cpp
  05_codegen/cleanup/cleanup.cpp
  05_codegen/cleanup/drop_hooks.cpp
  05_codegen/cleanup/unwind.cpp
  05_codegen/dyn_dispatch/dyn_dispatch.cpp
  05_codegen/dyn_dispatch/vtable_emit.cpp
  05_codegen/globals/binding_storage.cpp
  05_codegen/globals/entrypoint.cpp
  05_codegen/globals/globals.cpp
  05_codegen/globals/init.cpp
  05_codegen/globals/literal_emit.cpp
  05_codegen/intrinsics/builtins.cpp
  05_codegen/intrinsics/intrinsics_calls.cpp
  05_codegen/intrinsics/intrinsics_decls.cpp
  05_codegen/intrinsics/intrinsics_interface.cpp
  05_codegen/ir/ir_builder.cpp
  05_codegen/ir/ir_dump.cpp
  05_codegen/ir/ir_model.cpp
  05_codegen/layout/layout_aggregates.cpp
  05_codegen/layout/layout_dispatch.cpp
  05_codegen/layout/layout_dynobj.cpp
  05_codegen/layout/layout_enums.cpp
  05_codegen/layout/layout_modal.cpp
  05_codegen/layout/layout_primitives.cpp
  05_codegen/layout/layout_ranges.cpp
  05_codegen/layout/layout_records.cpp
  05_codegen/layout/layout_tuples.cpp
  05_codegen/layout/layout_unions.cpp
  05_codegen/layout/layout_value_bits.cpp
  05_codegen/lower/expr/addr_of.cpp
  05_codegen/lower/expr/all_expr.cpp
  05_codegen/lower/expr/alloc_expr.cpp
  05_codegen/lower/expr/array_literal.cpp
  05_codegen/lower/expr/binary.cpp
  05_codegen/lower/expr/block_expr.cpp
  05_codegen/lower/expr/call.cpp
  05_codegen/lower/expr/call_type_args.cpp
  05_codegen/lower/expr/cast.cpp
  05_codegen/lower/expr/closure_expr.cpp
  05_codegen/lower/expr/contract_entry.cpp
  05_codegen/lower/expr/contract_result.cpp
  05_codegen/lower/expr/deref.cpp
  05_codegen/lower/expr/dispatch_expr.cpp
  05_codegen/lower/expr/enum_literal.cpp
  05_codegen/lower/expr/error_expr.cpp
  05_codegen/lower/expr/expr_common.cpp
  05_codegen/lower/expr/field_access.cpp
  05_codegen/lower/expr/identifier.cpp
  05_codegen/lower/expr/if_expr.cpp
  05_codegen/lower/expr/index_access.cpp
  05_codegen/lower/expr/literal.cpp
  05_codegen/lower/expr/loop_conditional.cpp
  05_codegen/lower/expr/loop_infinite.cpp
  05_codegen/lower/expr/loop_iter.cpp
  05_codegen/lower/expr/match_expr.cpp
  05_codegen/lower/expr/method_call.cpp
  05_codegen/lower/expr/move_expr.cpp
  05_codegen/lower/expr/null_ptr.cpp
  05_codegen/lower/expr/parallel_expr.cpp
  05_codegen/lower/expr/path.cpp
  05_codegen/lower/expr/pipeline_expr.cpp
  05_codegen/lower/expr/propagate_expr.cpp
  05_codegen/lower/expr/qualified_apply.cpp
  05_codegen/lower/expr/qualified_name.cpp
  05_codegen/lower/expr/race_expr.cpp
  05_codegen/lower/expr/range.cpp
  05_codegen/lower/expr/record_literal.cpp
  05_codegen/lower/expr/spawn_expr.cpp
  05_codegen/lower/expr/sync_expr.cpp
  05_codegen/lower/expr/transmute_expr.cpp
  05_codegen/lower/expr/tuple_access.cpp
  05_codegen/lower/expr/tuple_literal.cpp
  05_codegen/lower/expr/unary.cpp
  05_codegen/lower/expr/unsafe_block_expr.cpp
  05_codegen/lower/expr/wait_expr.cpp
  05_codegen/lower/expr/yield_expr.cpp
  05_codegen/lower/expr/yield_from_expr.cpp
  05_codegen/lower/lower_bind.cpp
  05_codegen/lower/lower_module.cpp
  05_codegen/lower/lower_proc.cpp
  05_codegen/lower/stmt/assign_stmt.cpp
  05_codegen/lower/stmt/break_stmt.cpp
  05_codegen/lower/stmt/compound_assign_stmt.cpp
  05_codegen/lower/stmt/continue_stmt.cpp
  05_codegen/lower/stmt/defer_stmt.cpp
  05_codegen/lower/stmt/error_stmt.cpp
  05_codegen/lower/stmt/expr_stmt.cpp
  05_codegen/lower/stmt/frame_stmt.cpp
  05_codegen/lower/stmt/key_block_stmt.cpp
  05_codegen/lower/stmt/let_stmt.cpp
  05_codegen/lower/stmt/region_stmt.cpp
  05_codegen/lower/stmt/return_stmt.cpp
  05_codegen/lower/stmt/shadow_let_stmt.cpp
  05_codegen/lower/stmt/shadow_var_stmt.cpp
  05_codegen/lower/stmt/stmt_common.cpp
  05_codegen/lower/stmt/unsafe_block_stmt.cpp
  05_codegen/lower/stmt/var_stmt.cpp
  05_codegen/symbols/linkage.cpp
  05_codegen/symbols/mangle.cpp
  05_codegen/symbols/symbol_table.cpp
  05_codegen/symbols/visibility.cpp
)

target_include_directories(cursive0_codegen PUBLIC
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursive0_codegen PUBLIC cxx_std_20)

target_link_libraries(cursive0_project PUBLIC cursive0_core)
target_link_libraries(cursive0_source PUBLIC cursive0_core)
target_link_libraries(cursive0_analysis PUBLIC cursive0_core cursive0_source cursive0_project)
target_link_libraries(cursive0_codegen PUBLIC cursive0_analysis)

add_executable(cursivec0
  06_driver/cli.cpp
  06_driver/main.cpp
  06_driver/options.cpp
  06_driver/pipeline.cpp
  06_driver/version.cpp
)

target_link_libraries(cursivec0 PRIVATE cursive0_core cursive0_project cursive0_analysis cursive0_codegen cursive0_source)

target_include_directories(cursivec0 PRIVATE
  ${CMAKE_SOURCE_DIR}/include
)

target_compile_features(cursivec0 PRIVATE cxx_std_20)

